Introduced voting for next event Introduced timer for next event Changed spawn height to y = 80 Changed spawning to be within a sphere that grows with player count, instead of a square and is now centred on 0,0

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,8 @@
-name: Randomitemevery30
+name: RandomWars
 version: 1.0-SNAPSHOT
 main: me.xemor.randomwars.RandomWars
 api-version: 1.13
+commands:
+  vote:
+    aliases: ["v"]
+    description: "Allows you to vote to increase the chance of certain events"
